2003-06-14  Mike Kestner  <mkestner@speakeasy.net>

	* configure.in : tagging for 0.10

2003-06-14  Mike Kestner  <mkestner@speakeasy.net>

	* gtk/TreeViewColumn.custom : cast Array param to
	object[] before indexing into it.

2003-06-14  Mike Kestner  <mkestner@speakeasy.net>

	* glib/Value.cs : cast uint to TypeFundamentals

2003-06-14  Mike Kestner  <mkestner@speakeasy.net>

	* CallbackGen.cs : rework for internal callback helpers,
	pass NS to parms ctor
	* Ctor.cs : pass NS to parms ctor
	* Method.cs : pass NS to parms ctor
	* Parameters.cs : refactoring, plus rework for internal
	callback helpers.
	* Signal.cs : pass NS to parms ctor

2003-06-14  Mike Kestner  <mkestner@speakeasy.net>

	* parser/gapi2xml.pl : some whitespace parsing cleanup
	* api/*-api.xml : rerun of the parser.

2003-06-12  Mike Kestner  <mkestner@speakeasy.net>

	* generator/SimpleGen.cs : mark a few members virtual 
	since they are overridden elsewhere.

2003-05-29  Rachel Hestilow  <rachel@nullenvoid.com>

	* gconf/Value.cs: Update to use new string marshalling.

	* generator/StringGen.cs, ConstStringGen.cs: Added.
	* generator/IGeneratable.cs: Add new method ToNativeReturn.
	* generator/CallbackGen.cs: Implement ToNativeReturn. Call
	ToNativeReturn for the return statement. Fix a couple of
	places where s_ret was being used incorrectly for m_ret.
	* generator/ClassGen.cs, EnumGen.cs, ManualGen.cs,
	SimpleGen.cs, StructBase.cs: Implement ToNativeReturn.
	* generator/SignalHandler.cs: Call ToNativeReturn for the
	return statement, instead of CallByName.
	* generator/SymbolTable.cs: Use StringGen for gchar, char,
	and gunichar, and ConstStringGen for their const variants.
	Add a new method wrapper for ToNativeReturn.
	(Trim): Add a special-case for const strings so that the
	const is not stripped. Otherwise there is no way of
	resolving the const case.

	* glade/XML.custom: Update to use new string marshalling.

	* glib/Marshaller.cs: Added.