@@ -46,5 +46,10 @@ namespace GLib {
 				return val;
 			}
 		}
+
+		public override string ToString()
+		{
+			return val.ToString();
+		}
 	}
 }
