@@ -1,3 +1,7 @@
+2003-06-23  Martin Willemoes Hansen <mwh@sysrq.dk>
+
+	* glib/Type.cs: Added ToString
+
 2003-06-14  Mike Kestner  <mkestner@speakeasy.net>
 
 	* configure.in : tagging for 0.10
